--- a/index.html
+++ b/index.html
@@ -154,7 +154,8 @@ async function loadNWSAlerts(lat, lon) {
     "Hard Freeze Warning",
     "Freeze Warning",
     "Freeze Watch",
-    "Winter Weather Advisory",   // ✅ ADDED
+    "Winter Weather Advisory",
+    "Special Weather Statement"
     "High Wind Warning",
     "Wind Advisory",
     "Red Flag Warning",
@@ -334,3 +335,4 @@ gpsBtn.onclick = () =>
 
 </body>
 </html>
+
