--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <div class="forecast-container" id="daily-forecast"></div>
   </div>
 
-  <section id="nws-alerts">
+  <section id="nws-alerts" style="display:none;">
     <h2>🚨 Severe Weather Alerts</h2>
     <div id="nws-alert-list">Loading alerts…</div>
   </section>
@@ -335,4 +335,5 @@ gpsBtn.onclick = () =>
 
 </body>
 </html>
+
 
