--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ async function loadNWSAlerts(lat, lon) {
     "Freeze Warning",
     "Freeze Watch",
     "Winter Weather Advisory",
-    "Special Weather Statement"
+    "Special Weather Statement",
     "High Wind Warning",
     "Wind Advisory",
     "Red Flag Warning",
@@ -335,5 +335,6 @@ gpsBtn.onclick = () =>
 
 </body>
 </html>
+
 
 
